# SCI-Solver_Eikonal-2D

./: README.md
meshFIM_CUDA/: CUDADefines.h  CUDA_kernels.cpp2.i  CUDA_kernels.cpp3.i  CUDA_kernels.cu.cpp  CUDA_kernels.cubin  CUDA_kernels.cudafe1.c  CUDA_kernels.cudafe1.cpp  CUDA_kernels.cudafe1.gpu  CUDA_kernels.cudafe1.stub.c  CUDA_kernels.cudafe2.c  CUDA_kernels.cudafe2.gpu  CUDA_kernels.cudafe2.stub.c  CUDA_kernels.fatbin.c  CUDA_kernels.hash  CUDA_kernels.linkinfo  CUDA_kernels.ptx  UpgradeLog.XML  main.cpp  meshFIM.cpp2.i  meshFIM.cpp3.i  meshFIM.cu  meshFIM.cu.beforeChangedTo7  meshFIM.cu.reconcileSeperated  meshFIM.cubin  meshFIM.cudafe1.c  meshFIM.cudafe1.cpp  meshFIM.cudafe1.gpu  meshFIM.cudafe1.stub.c  meshFIM.cudafe1.stub.h  meshFIM.cudafe2.c  meshFIM.cudafe2.gpu  meshFIM.cudafe2.stub.c  meshFIM.fatbin.c  meshFIM.h  meshFIM.ptx
metisLib/: macros.h  metis.h  proto.h  util.c
src/: CMakeLists.txt  CTestConfig.cmake
src/core/: CMakeLists.txt
src/core/cuda/: CUDA_kernels.cu  meshFIM.cu
src/core/include/: meshFIM.h
src/examples/: CMakeLists.txt  example1.cpp
src/test/: CMakeLists.txt
trimesh2/bin.Linux64/: mesh_align  mesh_cat  mesh_cc  mesh_filter  mesh_make  mesh_shade  mesh_view
trimesh2/include/: GLCamera.h  TriMesh.h  TriMesh.h.manasi  timestamp.h  trimesh.h.old
trimesh2/libsrc/: ICP.cc  TriMesh_io.cc  mesh_align.cc
trimesh2/utilsrc/: mesh_view.cc
